fix svg z-index

--- a/static/css/heroic-features.css
+++ b/static/css/heroic-features.css
@@ -8,6 +8,7 @@
     position:fixed;
     height:100%;
     width:100%;
+    z-index:-1;
 }
 
 
